--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "type-graphql",
-  "version": "0.0.0-unreleased",
+  "name": "@realfriend/type-graphql",
+  "version": "1.1.1-patched1",
   "author": {
     "name": "Michał Lytek",
     "url": "https://github.com/MichalLytek"
@@ -19,7 +19,7 @@
     "verify": "npm run check && npm run lint",
     "package": "gulp package",
     "docs": "npm run --prefix website start",
-    "postinstall": "node ./dist/postinstall || exit 0"
+    "//postinstall": "node ./dist/postinstall || exit 0"
   },
   "peerDependencies": {
     "class-validator": ">=0.12.0",
@@ -127,5 +127,9 @@
   "engines": {
     "node": ">= 10.3"
   },
-  "private": true
+  "private": false,
+  "files": [
+    "dist/",
+    "src/"
+  ]
 }
